# cours-complexite

./: .gitignore  README.md  cli-requirements.txt  cli.py  elm.json  main.py  package-lock.json  package.json  play_all_games.py  requirements.txt
.github/workflows/: deploy.yml
_attic/: dump_stats.py  sqliterepository_py
_python/: .gitignore  Dockerfile  README.md  dev-requirements.txt  stats.py
_python/algorithms/: sort.py
_python/templates/: home.html
algorithms/: search.py  sort.py
elm/: .gitignore  README.md  elm.json
elm/public/: about.html  index.html
elm/src/: Chart.elm  Main.elm  Search.elm  Sort.elm  Types.elm  Ui.elm
elm/src/Page/: Game.elm  Home.elm  Search.elm  Sort.elm  Stats.elm  Teacher.elm  TeacherList.elm
python/: README.md  dump_stats.py  play_all_games.py  pyproject.toml  search_algorithms.py  sort_algorithms.py  stats.py
src/Pages/: Home_.elm
templates/: base.html  search_game.html  team_base.html  team_home.html  team_play.html  team_search.html  team_sort.html
